--- a/index.html
+++ b/index.html
@@ -1,18 +1,10 @@
-nombre: Build and Deploy
-donde: [push]
-permisiones:
-  contentos: write
-jobs:
-  build-and-deploy:
-    concurrency: ci-${{github.ref}}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        usos: actions/checkout@v3
-
-      - name: Deploy
-        usos: JamesIves/github-pages-deploy-action@v4
-        with:
-          branch: gh-pages
-          folder: .
-          config: baseUrl=/
+<html lang="es">
+    <head>        
+        <meta charset="utf-8"/>        
+        <title>Home</title>        
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    </head>
+    <body>
+       Hola
+    </body>
+</html>
