Crear links de las actividades en el home

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     </head>
     <body>
-       Hola
+       <h1>Home</h1>
+
+       <ul>
+        <li><a href="/formato.html">Formato</a></li>
+       </ul>
     </body>
 </html>
