arreglado link del home a formato

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
        <h1>Home</h1>
 
        <ul>
-        <li><a href="/formato.html">Formato</a></li>
+        <li><a href="/dam-practica-0/formato.html">Formato</a></li>
        </ul>
     </body>
 </html>
