Acabar de arreglar los links de index y hipervinculos

--- a/Hipervinculos/hipervinculos-actividades.html
+++ b/Hipervinculos/hipervinculos-actividades.html
@@ -9,7 +9,8 @@
     <h1>Actividades de <b>Hipervinculos</b></h1>
 
     <p>Ver Actividades:</p>
-    <a href="#Actividad-1">Actividad-1</a>
+    <a href="#Actividad-1">Actividad-1</a><br><a href="#Actividad-2">Actividad-2</a>
+
 <hr>
     <section>
         <h2>Actividad-1</h2>  
@@ -21,8 +22,6 @@
     </section>
 
     <hr>
-    <a href="#Actividad-2">Actividad-2</a>
-
     <section>
         <h2>Actividad-2</h2>
         <h1>Menús</h1>
