--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
        <h1>Home</h1>
 
        <ul>
-        <li><a href="/dam-practica-0/formato.html">Formato</a></li>
-        <li><a href="\dam-practica-0\Hipervinculos">Hipervinculos</a></li>
+        <li><a href="/formato.html">Formato</a></li>
+        <li><a href="/Hipervinculos/hipervinculos-actividades.html">Hipervinculos</a></li>
        </ul>
     </body>
 </html>
