arreglar los idices para las escenas ancladas

--- a/Hipervinculos/hipervinculos-actividades.html
+++ b/Hipervinculos/hipervinculos-actividades.html
@@ -8,11 +8,11 @@
 <body>
     <h1>Actividades de <b>Hipervinculos</b></h1>
 
-    <p>Ver Actividades:</p>
-    <a href="#Actividad-1">Actividad-1</a><br><a href="#Actividad-2">Actividad-2</a>
-
+    <div>
+        <a href="#Actividad-1">Ir a Actividad 1</a> | <a href="#Actividad-2">Ir a Actividad 2</a>
+    </div>
 <hr>
-    <section>
+    <section id="Actividad-1">
         <h2>Actividad-1</h2>  
         <h1>Restaurante Chino</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adispisicing elit. Qui nesciunt necessitatibus ullam facere itaque aliquam laudantinum, cumque culpa ad praesentium fugit inventore dicta rem, accusantium, maiores, provident laborum volupantum?</p>
@@ -22,7 +22,7 @@
     </section>
 
     <hr>
-    <section>
+    <section id="Actividad-2">
         <h2>Actividad-2</h2>
         <h1>Menús</h1>
         <h2>Del Día</h2>
