arreglos de index y formato

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     </head>
     <body>
-       <h1>Home</h1>
+       <h1>Todas Las Actividades</h1>
 
        <ul>
         <li><a href="/formato.html">Formato</a></li>
