Arreglado links de index que no funcionaban

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
        <h1>Todas Las Actividades</h1>
 
        <ul>
-        <li><a href="/formato.html">Formato</a></li>
-        <li><a href="/Hipervinculos/hipervinculos-actividades.html">Hipervinculos</a></li>
+        <li><a href="/dam-practica-0/formato.html">Formato</a></li>
+        <li><a href="/dam-practica-0/Hipervinculos/hipervinculos-actividades.html">Hipervinculos</a></li>
        </ul>
     </body>
 </html>
