Añadidio link de imagenes a index

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <li><a href="/dam-practica-0/formato.html">Formato</a></li>
         <li><a href="/dam-practica-0/Hipervinculos/hipervinculos-actividades.html">Hipervinculos</a></li>
         <li><a href="/Listas.html#">Listas</a></li>
+        <li><a href="/Imagenes.html">Imagenes</a></li>
        </ul>
     </body>
 </html>
