Actualizacion del apartado de links

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
        <h1>Todas Las Actividades</h1>
 
        <ul>
-        <li><a href="/dam-practica-0/formato.html">Formato</a></li>
-        <li><a href="/dam-practica-0/Hipervinculos/hipervinculos-actividades.html">Hipervinculos</a></li>
+        <li><a href="/formato.html">Formato</a></li>
+        <li><a href="/Hipervinculos/hipervinculos-actividades.html">Hipervinculos</a></li>
         <li><a href="/Listas.html#">Listas</a></li>
         <li><a href="/Imagenes.html">Imagenes</a></li>
+        <li><a href="/Tablas.html">tablas</a></li>
        </ul>
     </body>
 </html>
