actualizacion de index

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="/Listas.html#">Listas</a></li>
         <li><a href="/Imagenes.html">Imagenes</a></li>
         <li><a href="/Tablas.html">tablas</a></li>
+        <li a href="/Formularios.html">Formilarios</li>
        </ul>
     </body>
 </html>
