--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="/Imagenes.html">Imagenes</a></li>
         <li><a href="/Tablas.html">tablas</a></li>
         <li a href="/Formularios.html">Formilarios</li>
+        <li a href="/Multimedia.html">Multimedia</li>
        </ul>
     </body>
 </html>
