Intentar acabar el ejercicio de contenido

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <li><a href="/Listas.html#">Listas</a></li>
         <li><a href="/Imagenes.html">Imagenes</a></li>
         <li><a href="/Tablas.html">tablas</a></li>
-        <li a href="/Formularios.html">Formilarios</li>
-        <li a href="/Multimedia.html">Multimedia</li>
-       </ul>
+        <li><a href="/Formularios.html">Formilarios</a></li>
+        <li><a href="/Multimedia.html">Multimedia</a></li>
+       </ul>    
     </body>
 </html>
