Acabar de poner todos los links en index

--- a/Accesibilidad.html
+++ b/Accesibilidad.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Actividades de Interativos</title>
+    <title>Actividades de Accesibilidad</title>
 </head>
 <body>
-    <h1>Actividades de Interativos</h1>
+    <h1>Actividades de Accesibilidad</h1>
 <hr>
 <h2>Actividad 1</h2>  
 <fieldset>
