--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <li><a href="/Tablas.html">tablas</a></li>
         <li><a href="/Formularios.html">Formilarios</a></li>
         <li><a href="/Multimedia.html">Multimedia</a></li>
+        <li><a href="/Contenido.html">Contenido</a></li>
+        <li><a href="/Metas.html">Metas</a></li>
+        <li><a href="/Interactivos.html">Interactivos</a></li>
+        <li><a href="/Accesibilidad.html">Accesibilidad</a></li>
        </ul>    
     </body>
 </html>
