Empezar hacer las cosas de css (carpetas i algunos ejercicios)

--- a/Actividades-CSS/index.html
+++ b/Actividades-CSS/index.html
@@ -8,9 +8,8 @@
        <h1>Todas Las Actividades</h1>
 
        <ul>
-        <li><a href="/Actividades-HTML/index.html">Actividades-HTML</a></li>
-        <li><a href="">Actividades-CSS</a></li>
-       
+        <li><a href="">Selectores</a></li>
+        <li><a href="">Variables</a></li>
        </ul>    
     </body>
 </html>
