--- a/Actividades-CSS/BEM.html
+++ b/Actividades-CSS/BEM.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="BEM.css">
+    <link rel="stylesheet" href="bem.css">
 
     <title>Actividades de BEM</title>
 </head>
