--- a/Actividades-CSS/Padding.html
+++ b/Actividades-CSS/Padding.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Padding.css">
+    <link rel="stylesheet" href="padding.css">
 
     <title>Actividades de Paddingç</title>
 </head>
