--- a/Actividades-CSS/Selectores.html
+++ b/Actividades-CSS/Selectores.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Selectores.css">
+    <link rel="stylesheet" href="selectores.css">
 
     <title>Actividades de Selectores</title>
 </head>
