--- a/Actividades-CSS/Variables.html
+++ b/Actividades-CSS/Variables.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Variables.css">
+    <link rel="stylesheet" href="variables.css">
 
     <title>Actividades de Variables</title>
 </head>
