Nuevos links de índex html

--- a/Actividades-HTML/index.html
+++ b/Actividades-HTML/index.html
@@ -8,17 +8,17 @@
        <h1>Todas Las Actividades</h1>
 
        <ul>
-        <li><a href="/formato.html">Formato</a></li>
-        <li><a href="/Hipervinculos/hipervinculos-actividades.html">Hipervinculos</a></li>
-        <li><a href="/Listas.html#">Listas</a></li>
-        <li><a href="/Imagenes.html">Imagenes</a></li>
-        <li><a href="/Tablas.html">tablas</a></li>
-        <li><a href="/Formularios.html">Formilarios</a></li>
-        <li><a href="/Multimedia.html">Multimedia</a></li>
-        <li><a href="/Contenido.html">Contenido</a></li>
-        <li><a href="/Metas.html">Metas</a></li>
-        <li><a href="/Interactivos.html">Interactivos</a></li>
-        <li><a href="/Accesibilidad.html">Accesibilidad</a></li>
+        <li><a href="/actividades-html/formato.html">Formato</a></li>
+        <li><a href="/actividades-html/hipervinculos/hipervinculos-actividades.html">Hipervinculos</a></li>
+        <li><a href="/actividades-html/listas.html">Listas</a></li>
+        <li><a href="/actividades-html/imagenes.html">Imagenes</a></li>
+        <li><a href="/actividades-html/tablas.html">tablas</a></li>
+        <li><a href="/actividades-html/formularios.html">Formilarios</a></li>
+        <li><a href="/actividades-html/multimedia.html">Multimedia</a></li>
+        <li><a href="/actividades-html/contenido.html">Contenido</a></li>
+        <li><a href="/actividades-html/metas.html">Metas</a></li>
+        <li><a href="/actividades-html/interactivos.html">Interactivos</a></li>
+        <li><a href="/actividades-html/accesibilidad.html">Accesibilidad</a></li>
        </ul>    
     </body>
 </html>
