Actividad dee transition hecha y añadidio links

--- a/Actividades-CSS/index.html
+++ b/Actividades-CSS/index.html
@@ -8,8 +8,25 @@
        <h1>Todas Las Actividades</h1>
 
        <ul>
-        <li><a href="">Selectores</a></li>
-        <li><a href="">Variables</a></li>
+        <li><a href="/actividades-css/selectores.html">Selectores</a></li>
+        <li><a href="/actividades-css/variables.html">Variables</a></li>
+        <li><a href="/actividades-css/bem.html">BEM</a></li>
+        <li><a href="/actividades-css/color.html">Color</a></li>
+        <li><a href="/actividades-css/texto.html">Texto</a></li>
+        <li><a href="/actividades-css/medidas.html">Medidias</a></li>
+        <li><a href="/actividades-css/imagenes.html">Imagenes</a></li>
+        <li><a href="/actividades-css/display.html">Display</a></li>
+        <li><a href="/actividades-css/margin.html">Margin</a></li>
+        <li><a href="/actividades-css/padding.html">Padding</a></li>
+        <li><a href="/actividades-css/boder.html">Border</a></li>
+        <li><a href="/actividades-css/listas.html">Lista</a></li>
+        <li><a href="/actividades-css/overflow.html">Overflow</a></li>
+        <li><a href="/actividades-css/filters.html">Filters</a></li>
+        <li><a href="/actividades-css/transform.html">Transform</a></li>
+        <li><a href="/actividades-css/transition.html">Transition</a></li>
+        <li><a href="">Animation</a></li>
+
+
        </ul>    
     </body>
 </html>
