--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
        <ul>
         <li><a href="/Actividades-HTML/index.html">Actividades-HTML</a></li>
-        <li><a href="">Actividades-CSS</a></li>
+        <li><a href="/actividades-css/index.html">Actividades-CSS</a></li>
        
        </ul>    
     </body>
