acabar practica de 3d

--- a/actividades-css/3d.html
+++ b/actividades-css/3d.html
@@ -3,57 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="animation.css">
-    <title>Actividades de Animation</title>
+    <link rel="stylesheet" href="3d.css">
+    <title>Actividades de 3D</title>
 </head>
 <body>
-    <h1>Actividades de Animation</h1>
-    <hr>
+    <h1>Actividades de 3D</h1>
+<hr>
     <h2>Actividad 1</h2>   
-    <div class="container">
-        <div class="circulo sol"></div>
-        <div class="circulo luna"></div>
-    </div>
-    <hr>
+        <img class="elemento1" src="https://png.pngtree.com/png-clipart/20230927/original/pngtree-cartoon-character-animal-sheep-on-a-white-background-vector-png-image_13154886.png" alt="obeja 3D" style="width: 400px; height: 400px auto;">
+<hr>
     <h2>Actividad 2</h2>
-    <div class="noria">
-        <div class="cabina"></div>
-        <div class="cabina"></div>
-        <div class="cabina"></div>
-        <div class="cabina"></div>
-        <div class="cabina"></div>
-        <div class="cabina"></div>
-        <div class="cabina"></div>
+   <div class="contenedor">
+        <img src="https://images.unsplash.com/photo-1666706569239-a5fd5c3f9cad?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDU5fHx8ZW58MHx8fHx8" alt="pared" class="pared">
+        <img src="https://png.pngtree.com/png-clipart/20230927/original/pngtree-cartoon-character-animal-sheep-on-a-white-background-vector-png-image_13154886.png" alt="obeja 3D" class="obeja">
     </div>
-    <hr>
-    <h2>Actividad 4</h2>
-    <div class="reloj">
-        <div class="agujas">
-            <div class="aguja-hora"></div>
-            <div class="aguja-minuto"></div>
-            <div class="aguja-segundo"></div>
-        </div>
-        <div class="numeros">
-            <div class="numero numero-1">1</div>
-            <div class="numero numero-2">2</div>
-            <div class="numero numero-3">3</div>
-            <div class="numero numero-4">4</div>
-            <div class="numero numero-5">5</div>
-            <div class="numero numero-6">6</div>
-            <div class="numero numero-7">7</div>
-            <div class="numero numero-8">8</div>
-            <div class="numero numero-9">9</div>
-            <div class="numero numero-10">10</div>
-            <div class="numero numero-11">11</div>
-            <div class="numero numero-12">12</div>
-        </div>
-    </div>
-    <hr>
-    <h2>Actividad 6</h2>     
-    <div class="pendulo-container">
-        <div class="cuerda">
-            <div class="peso"></div>
-        </div>
-    </div>
+
 </body>
 </html>
