--- a/porfolio.html
+++ b/porfolio.html
@@ -14,7 +14,7 @@
             <div class="logo">Portfolio</div>
             <div class="nav-links">
                 <a href="#home" class="nav-link">Inicio</a>
-                <a href="/index.html" class="nav-link">Proyectos</a>
+                <a href="#projects" class="nav-link">Proyectos</a>
                 <a href="#skills" class="nav-link">Habilidades</a>
                 <a href="#contact" class="nav-link">Contacto</a>
             </div>
@@ -40,30 +40,30 @@
         <div class="section-container">
             <h2 class="section-title">Proyectos</h2>
             <div class="projects-grid">
-                <div class="project-card">
-                    <div class="project-image"></div>
-                    <div class="project-content">
-                        <h3 class="project-title">E-commerce Platform</h3>
-                        <p class="project-description">A full-featured online shopping platform built with React and Node.js.</p>
-                        <a href="#" class="btn">View Project</a>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-image"></div>
-                    <div class="project-content">
-                        <h3 class="project-title">Social Media Dashboard</h3>
-                        <p class="project-description">Analytics dashboard for social media management and monitoring.</p>
-                        <a href="#" class="btn">View Project</a>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-image"></div>
-                    <div class="project-content">
-                        <h3 class="project-title">Task Management App</h3>
-                        <p class="project-description">Collaborative task management solution for remote teams.</p>
-                        <a href="#" class="btn">View Project</a>
-                    </div>
-                </div>
+            <div class="project-card">
+            <div class="project-image"></div>
+            <div class="project-content">
+                  <h3 class="project-title">Nombre del proyecto</h3>
+                <p class="project-description">informacion del pryecto</p>
+                <a href="#" class="btn">Ver Proyecto</a>
+            </div>
+            </div>
+            <div class="project-card">
+            <div class="project-image"></div>
+            <div class="project-content">
+                <h3 class="project-title">Nombre del proyecto</h3>
+                 <p class="project-description">informacion del pryecto</p>
+                 <a href="#" class="btn">Ver Proyecto</a>
+            </div>
+            </div>
+            <div class="project-card">
+            <div class="project-image"></div>
+            <div class="project-content">
+                <h3 class="project-title">Nombre del proyecto</h3>
+                <p class="project-description">informacion del pryecto</p>
+                <a href="#" class="btn">Ver Proyecto</a>
+            </div>
+            </div>
             </div>
         </div>
     </section>
@@ -72,26 +72,21 @@
         <div class="section-container">
             <h2 class="section-title">Habilidades y Experiencia</h2>
             <div class="skills-grid">
-                <div class="skill-card">
-                    <i class="fas fa-code skill-icon"></i>
-                    <h3>Frontend Development</h3>
-                    <p>HTML, CSS, JavaScript, React</p>
-                </div>
-                <div class="skill-card">
-                    <i class="fas fa-server skill-icon"></i>
-                    <h3>Backend Development</h3>
-                    <p>Node.js, Python, SQL</p>
-                </div>
-                <div class="skill-card">
-                    <i class="fas fa-mobile-alt skill-icon"></i>
-                    <h3>Mobile Development</h3>
-                    <p>React Native, Flutter</p>
-                </div>
-                <div class="skill-card">
-                    <i class="fas fa-paint-brush skill-icon"></i>
-                    <h3>UI/UX Design</h3>
-                    <p>Figma, Adobe XD</p>
-                </div>
+            <div class="skill-card">
+                <i class="fas fa-code skill-icon"></i>
+                <h3>Desarrollo web front-end</h3>
+                <p>HTML, CSS, JavaScript</p>
+            </div>
+            <div class="skill-card">
+                <i class="fas fa-server skill-icon"></i>
+                <h3>Desarrollo de web Backend </h3>
+                <p>Python, SQL</p>
+            </div>
+            <div class="skill-card">
+                <i class="fas fa-paint-brush skill-icon"></i>
+                <h3>Diseño</h3>
+                <p> Adobe, Proteus</p>
+            </div>
             </div>
         </div>
     </section>
@@ -100,18 +95,18 @@
         <div class="section-container">
             <h2 class="section-title">Contactame</h2>
             <form class="contact-form">
-                <div class="form-group">
-                    <label class="form-label">Nombre</label>
-                    <input type="text" class="form-input" placeholder="Tu nombre">
-                </div>
-                <div class="form-group">
-                    <label class="form-label">Email</label>
-                    <input type="email" class="form-input" placeholder="Tu@email.com">
-                </div>
-                <div class="form-group">
-                    <label class="form-label">Mensaje</label>
-                    <textarea class="form-input" rows="5" placeholder="Tu Mensaje"></textarea>
-                </div>
+            <div class="form-group">
+                <label class="form-label">Nombre</label>
+                <input type="text" class="form-input" placeholder="Tu nombre">
+            </div>
+            <div class="form-group">
+                <label class="form-label">Email</label>
+                <input type="email" class="form-input" placeholder="Tu@email.com">
+            </div>
+            <div class="form-group">
+                <label class="form-label">Mensaje</label>
+                <textarea class="form-input" rows="5" placeholder="Tu Mensaje"></textarea>
+            </div>
                 <button type="submit" class="btn">Send Message</button>
             </form>
         </div>
@@ -122,26 +117,26 @@
             <h2 class="section-title">Mi Curriculum</h2>
             <div class="cv-container" style="text-align: center;">
                 <p style="color: #ffffff; margin-bottom: 2rem; font-size: 1.1rem;">Descarga mi CV para conocer más sobre mi experiencia y habilidades</p>
-                <div class="cv-card">
-                    <i class="fas fa-file-pdf" style="
-                        font-size: 3rem;
-                        color: var(--primary);
-                        margin-bottom: 1rem;"></i>
-                    <h3 style="
-                        color: var(--secondary);
-                        margin-bottom: 1rem;
+            <div class="cv-card">
+                <i class="fas fa-file-pdf" style="
+                    font-size: 3rem;
+                    color: var(--primary);
+                    margin-bottom: 1rem;"></i>
+                <h3 style="
+                     color: var(--secondary);
+                     margin-bottom: 1rem;
                     ">Kevin Castro Pereira - CV</h3>
-                    <p style="
-                        color: #a8a8a8;
-                        margin-bottom: 2rem;
+                <p style="
+                     color: #a8a8a8;
+                    margin-bottom: 2rem;
                     ">Formato PDF - Actualizado 2024</p>
-                    <a href="ruta-a-tu-cv.pdf" download class="btn" style="
-                        margin: 0 auto;
+                <a href="ruta-a-tu-cv.pdf" download class="btn" style="
+                    margin: 0 auto;
                     ">
-                        <i class="fas fa-download" style="margin-right: 10px;"></i>
-                        Descargar CV
-                    </a>
-                </div>
+                    <i class="fas fa-download" style="margin-right: 10px;"></i>
+                    Descargar CV
+                </a>
+            </div>
             </div>
         </div>
     </section>
