--- a/porfolio.html
+++ b/porfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="porfolio.css">
-    <title>Kevin's Portfolio</title>
+    <title>Kevin Portfolio</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
    
 </head>
@@ -107,7 +107,7 @@
                 <label class="form-label">Mensaje</label>
                 <textarea class="form-input" rows="5" placeholder="Tu Mensaje"></textarea>
             </div>
-                <button type="submit" class="btn">Send Message</button>
+                <button type="submit" class="btn">Enviar Mensaje</button>
             </form>
         </div>
     </section>
