--- a/Actividades-CSS/index.html
+++ b/Actividades-CSS/index.html
@@ -4,6 +4,16 @@
         <title>Home</title>        
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     </head>
+    <style>
+        body {
+            background-color: rgb(68, 62, 62); }
+        a{
+            color: white; }
+        h1{
+            color: white; }
+        li{
+            color: white; }
+    </style>
     <body>
        <h1>Todas Las Actividades</h1>
 
@@ -25,8 +35,7 @@
         <li><a href="/actividades-css/transform.html">Transform</a></li>
         <li><a href="/actividades-css/transition.html">Transition</a></li>
         <li><a href="/actividades-css/animation.html">Animation</a></li>
-
-
+        <li><a href="/actividades-css/3d.html">3d</a></li>       
        </ul>    
     </body>
 </html>
