--- a/Actividades-HTML/index.html
+++ b/Actividades-HTML/index.html
@@ -4,6 +4,16 @@
         <title>Home</title>        
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     </head>
+    <style>
+        body {
+            background-color: rgb(68, 62, 62); }
+        a{
+            color: white; }
+        h1{
+            color: white; }
+        li{
+            color: white; }
+    </style>
     <body>
        <h1>Todas Las Actividades</h1>
 
