--- a/porfolio/index.html
+++ b/porfolio/index.html
@@ -31,7 +31,7 @@
                 <a href="#contact" class="btn">Contactame</a>
             </div>
             <div class="hero-image">
-                <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png" alt="Profile Image">
+                <img src="/img/foto.jpg" alt="Profile Image">
             </div>
         </div>
     </section>
@@ -130,7 +130,7 @@
                      color: #a8a8a8;
                     margin-bottom: 2rem;
                     ">Formato PDF - Actualizado 2024</p>
-                <a href="ruta-a-tu-cv.pdf" download class="btn" style="
+                <a href="/pdf/curriculum.pdf" target="_blank" download class="btn" style="
                     margin: 0 auto;
                     ">
                     <i class="fas fa-download" style="margin-right: 10px;"></i>
