añadir class nueva

--- a/porfolio/index.html
+++ b/porfolio/index.html
@@ -17,6 +17,7 @@
                 <a href="#projects" class="nav-link">Proyectos</a>
                 <a href="#skills" class="nav-link">Habilidades</a>
                 <a href="#contact" class="nav-link">Contacto</a>
+                <a href="#curriculum" class="nav-link">Curriculum</a>                
             </div>
         </div>
     </nav>
