arreglo de porfolio y proyectos

--- a/porfolio/index.html
+++ b/porfolio/index.html
@@ -43,9 +43,9 @@
             <div class="project-card">
             <div class="project-image"></div>
             <div class="project-content">
-                  <h3 class="project-title">Nombre del proyecto</h3>
-                <p class="project-description">informacion del pryecto</p>
-                <a href="#" class="btn">Ver Proyecto</a>
+                  <h3 class="project-title">Proyecto de HTML Y CSS</h3>
+                <p class="project-description">Este proyecto esta echo en el grado formativo superior de desarrollo de aplicaciones miltiplataforma</p>
+                <a href="/index.html" class="btn">Ver Proyecto</a>
             </div>
             </div>
             <div class="project-card">
