--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        <h1>Todas Las Actividades</h1>
 
        <ul>
-        <li><a href="/Actividades-HTML/index.html">Actividades-HTML</a></li>
+        <li><a href="/actividades-html/index.html">Actividades-HTML</a></li>
         <li><a href="/actividades-css/index.html">Actividades-CSS</a></li>
        </ul>    
     </body>
