--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
        <ul>
         <li><a href="/actividades-html/index.html">Actividades-HTML</a></li>
-        <li><a href="/actividades_css/index.html">Actividades-CSS</a></li>
+        <li><a href="https://k3viin1.github.io/dam-practica-0/actividades_css/index.html">Actividades-CSS</a></li>
        </ul>    
     </body>
 </html>
