--- a/actividades_css/index.html
+++ b/actividades_css/index.html
@@ -18,24 +18,24 @@
        <h1>Todas Las Actividades</h1>
 
        <ul>
-        <li><a href="/actividades-css/selectores.html">Selectores</a></li>
-        <li><a href="/actividades-css/variables.html">Variables</a></li>
-        <li><a href="/actividades-css/bem.html">BEM</a></li>
-        <li><a href="/actividades-css/color.html">Color</a></li>
-        <li><a href="/actividades-css/texto.html">Texto</a></li>
-        <li><a href="/actividades-css/medidas.html">Medidias</a></li>
-        <li><a href="/actividades-css/imagenes.html">Imagenes</a></li>
-        <li><a href="/actividades-css/display.html">Display</a></li>
-        <li><a href="/actividades-css/margin.html">Margin</a></li>
-        <li><a href="/actividades-css/padding.html">Padding</a></li>
-        <li><a href="/actividades-css/boder.html">Border</a></li>
-        <li><a href="/actividades-css/listas.html">Lista</a></li>
-        <li><a href="/actividades-css/overflow.html">Overflow</a></li>
-        <li><a href="/actividades-css/filters.html">Filters</a></li>
-        <li><a href="/actividades-css/transform.html">Transform</a></li>
-        <li><a href="/actividades-css/transition.html">Transition</a></li>
-        <li><a href="/actividades-css/animation.html">Animation</a></li>
-        <li><a href="/actividades-css/3d.html">3d</a></li>       
+        <li><a href="/actividades_css/selectores.html">Selectores</a></li>
+        <li><a href="/actividades_css/variables.html">Variables</a></li>
+        <li><a href="/actividades_css/bem.html">BEM</a></li>
+        <li><a href="/actividades_css/color.html">Color</a></li>
+        <li><a href="/actividades_css/texto.html">Texto</a></li>
+        <li><a href="/actividades_css/medidas.html">Medidias</a></li>
+        <li><a href="/actividades_css/imagenes.html">Imagenes</a></li>
+        <li><a href="/actividades_css/display.html">Display</a></li>
+        <li><a href="/actividades_css/margin.html">Margin</a></li>
+        <li><a href="/actividades_css/padding.html">Padding</a></li>
+        <li><a href="/actividades_css/boder.html">Border</a></li>
+        <li><a href="/actividades_css/listas.html">Lista</a></li>
+        <li><a href="/actividades_css/overflow.html">Overflow</a></li>
+        <li><a href="/actividades_css/filters.html">Filters</a></li>
+        <li><a href="/actividades_css/transform.html">Transform</a></li>
+        <li><a href="/actividades_css/transition.html">Transition</a></li>
+        <li><a href="/actividades_css/animation.html">Animation</a></li>
+        <li><a href="/actividades_css/3d.html">3d</a></li>       
        </ul>    
     </body>
 </html>
