--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        <h1>Todas Las Actividades</h1>
 
        <ul>                                                   
-        <li><a href="https://k3viin1.github.io/dam-practica-0/actividades-html/index.html">Actividades-HTML</a></li>
+        <li><a href="https://k3viin1.github.io/dam-practica-0/actividades-html/Actividades-HTML">Actividades-HTML</a></li>
         <li><a href="https://k3viin1.github.io/dam-practica-0/actividades_css/index.html">Actividades-CSS</a></li>
        </ul>    
     </body>
