--- a/actividades_html/index.html
+++ b/actividades_html/index.html
@@ -18,17 +18,17 @@
        <h1>Todas Las Actividades</h1>
 
        <ul>
-        <li><a href="/actividades-html/formato.html">Formato</a></li>
-        <li><a href="/actividades-html/hipervinculos/hipervinculos-actividades.html">Hipervinculos</a></li>
-        <li><a href="/actividades-html/listas.html">Listas</a></li>
-        <li><a href="/actividades-html/imagenes.html">Imagenes</a></li>
-        <li><a href="/actividades-html/tablas.html">tablas</a></li>
-        <li><a href="/actividades-html/formularios.html">Formilarios</a></li>
-        <li><a href="/actividades-html/multimedia.html">Multimedia</a></li>
-        <li><a href="/actividades-html/contenido.html">Contenido</a></li>
-        <li><a href="/actividades-html/metas.html">Metas</a></li>
-        <li><a href="/actividades-html/interactivos.html">Interactivos</a></li>
-        <li><a href="/actividades-html/accesibilidad.html">Accesibilidad</a></li>
+        <li><a href="/actividades_html/formato.html">Formato</a></li>
+        <li><a href="/actividades_html/hipervinculos/hipervinculos_actividades.html">Hipervinculos</a></li>
+        <li><a href="/actividades_html/listas.html">Listas</a></li>
+        <li><a href="/actividades_html/imagenes.html">Imagenes</a></li>
+        <li><a href="/actividades_html/tablas.html">tablas</a></li>
+        <li><a href="/actividades_html/formularios.html">Formilarios</a></li>
+        <li><a href="/actividades_html/multimedia.html">Multimedia</a></li>
+        <li><a href="/actividades_html/contenido.html">Contenido</a></li>
+        <li><a href="/actividades_html/metas.html">Metas</a></li>
+        <li><a href="/actividades_html/interactivos.html">Interactivos</a></li>
+        <li><a href="/actividades_html/accesibilidad.html">Accesibilidad</a></li>
        </ul>    
     </body>
 </html>
