--- a/actividades_html/index.html
+++ b/actividades_html/index.html
@@ -17,8 +17,8 @@
     <body>
        <h1>Todas Las Actividades</h1>
 
-       <ul>
-        <li><a href="/actividades_html/formato.html">Formato</a></li>
+       <ul>          
+        <li><a href="https://k3viin1.github.io/dam-practica-0/actividades_html/formato.html">Formato</a></li>
         <li><a href="/actividades_html/hipervinculos/hipervinculos_actividades.html">Hipervinculos</a></li>
         <li><a href="/actividades_html/listas.html">Listas</a></li>
         <li><a href="/actividades_html/imagenes.html">Imagenes</a></li>
