--- a/actividades_html/index.html
+++ b/actividades_html/index.html
@@ -19,16 +19,16 @@
 
        <ul>          
         <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_html/formato.html">Formato</a></li>
-        <li><a href="/actividades_html/hipervinculos/hipervinculos_actividades.html">Hipervinculos</a></li>
-        <li><a href="/actividades_html/listas.html">Listas</a></li>
-        <li><a href="/actividades_html/imagenes.html">Imagenes</a></li>
-        <li><a href="/actividades_html/tablas.html">tablas</a></li>
-        <li><a href="/actividades_html/formularios.html">Formilarios</a></li>
-        <li><a href="/actividades_html/multimedia.html">Multimedia</a></li>
-        <li><a href="/actividades_html/contenido.html">Contenido</a></li>
-        <li><a href="/actividades_html/metas.html">Metas</a></li>
-        <li><a href="/actividades_html/interactivos.html">Interactivos</a></li>
-        <li><a href="/actividades_html/accesibilidad.html">Accesibilidad</a></li>
+        <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_html/hipervinculos/hipervinculos_actividades.html">Hipervinculos</a></li>
+        <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_html/listas.html">Listas</a></li>
+        <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_html/imagenes.html">Imagenes</a></li>
+        <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_html/tablas.html">tablas</a></li>
+        <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_html/formularios.html">Formilarios</a></li>
+        <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_html/multimedia.html">Multimedia</a></li>
+        <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_html/contenido.html">Contenido</a></li>
+        <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_html/metas.html">Metas</a></li>
+        <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_html/interactivos.html">Interactivos</a></li>
+        <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_html/accesibilidad.html">Accesibilidad</a></li>
        </ul>    
     </body>
 </html>
