--- a/porfolio/index.html
+++ b/porfolio/index.html
@@ -45,7 +45,7 @@
             <div class="project-content">
                   <h3 class="project-title">Proyecto de HTML Y CSS</h3>
                 <p class="project-description">Este proyecto esta echo en el grado formativo superior de desarrollo de aplicaciones miltiplataforma</p>
-                <a href="/index.html" class="btn">Ver Proyecto</a>
+                <a href="https://k3viin1.github.io/dam_practica_0/" class="btn">Ver Proyecto</a>
             </div>
             </div>
             <div class="project-card">
