acaabar de arrglar todo

--- a/actividades_html/hipervinculos/hipervinculos_actividades.html
+++ b/actividades_html/hipervinculos/hipervinculos_actividades.html
@@ -18,9 +18,8 @@
         <p>Lorem ipsum dolor, sit amet consectetur adispisicing elit. Qui nesciunt necessitatibus ullam facere itaque aliquam laudantinum, cumque culpa ad praesentium fugit inventore dicta rem, accusantium, maiores, provident laborum volupantum?</p>
         <h2>¿Quienes somos?</h2>
         <p>Lorem ipsum dolor sit amet consectetur adispisicing elit. Sed fugiat, odit laboriosam ipsam enim minus commodi ex nisi accusantium voluptates quod querat a saepe tempora similique volupantum ad totam placeat?</p>
-        <a href="/Hipervinculos/Historia-restaurante-chino.html">Ver nuestra Historia</a>
+        <a href="https://k3viin1.github.io/dam_practica_0/actividades_html/hipervinculos/historia-restaurante-chino.html">Ver nuestra Historia</a>
     </section>
-
     <hr>
     <section id="Actividad-2">
         <h2>Actividad-2</h2>
