--- a/porfolio/index.html
+++ b/porfolio/index.html
@@ -44,7 +44,7 @@
             <div class="project-image"></div>
             <div class="project-content">
                   <h3 class="project-title">Proyecto de HTML Y CSS</h3>
-                <p class="project-description">Este proyecto esta echo en el grado formativo superior de desarrollo de aplicaciones miltiplataforma</p>
+                <p class="project-description">Este proyecto esta hecho en el grado formativo superior de desarrollo de aplicaciones miltiplataforma</p>
                 <a href="/index.html" class="btn">Ver Proyecto</a>
             </div>
             </div>
