--- a/actividades_css/index.html
+++ b/actividades_css/index.html
@@ -1,41 +1,131 @@
+<!DOCTYPE html>
 <html lang="es">
-    <head>        
-        <meta charset="utf-8"/>        
-        <title>Home</title>        
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    </head>
+<head>        
+    <meta charset="utf-8"/>        
+    <title>Home</title>        
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <style>
         body {
-            background-color: rgb(68, 62, 62); }
-        a{
-            color: white; }
-        h1{
-            color: white; }
-        li{
-            color: white; }
-    </style>
-    <body>
-       <h1>Todas Las Actividades</h1>
+            background: linear-gradient(135deg, #000000, #464545);
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            color: white;
+        }
 
-       <ul>
-        <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/selectores.html">Selectores</a></li>
-        <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/variables.html">Variables</a></li>
-        <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/bem.html">BEM</a></li>
-        <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/color.html">Color</a></li>
-        <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/texto.html">Texto</a></li>
-        <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/medidas.html">Medidias</a></li>
-        <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/imagenes.html">Imagenes</a></li>
-        <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/display.html">Display</a></li>
-        <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/margin.html">Margin</a></li>
-        <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/padding.html">Padding</a></li>
-        <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/boder.html">Border</a></li>
-        <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/listas.html">Lista</a></li>
-        <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/overflow.html">Overflow</a></li>
-        <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/filters.html">Filters</a></li>
-        <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/transform.html">Transform</a></li>
-        <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/transition.html">Transition</a></li>
-        <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/animation.html">Animation</a></li>
-        <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/3d.html">3d</a></li>       
-       </ul>    
-    </body>
+        .container {
+            background-color: rgba(0, 0, 0, 0.3);
+            border-radius: 15px;
+            padding: 30px 40px;
+            background-image: radial-gradient(circle farthest-corner at 10% 20%, rgba(255,94,247,1) 17.8%, rgba(2,245,255,1) 100.2%);
+            max-width: 800px;
+            width: 100%;
+            text-align: center;
+        }
+
+        h1 {
+            color: #ffffff;
+            margin-bottom: 30px;
+            font-size: 2.5rem;
+            font-weight: 700;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+            position: relative;
+            padding-bottom: 15px;
+        }
+
+        h1::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 100px;
+            height: 4px;
+            background: linear-gradient(90deg,rgba(2,245,255,1),rgba(255,94,247,1));
+            border-radius: 2px;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 30px 0 0;
+            display: flex;
+            flex-direction: row;
+            gap: 15px;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        li {
+            margin: 5px 0;
+        }
+
+        a {
+            display: block;
+            color: white;
+            text-decoration: none;
+            background-color: rgb(51, 51, 51);
+            padding: 16px 20px;
+            border-radius: 8px;
+            transition: all 0.3s ease;
+            font-size: 1.1rem;
+            font-weight: 500;
+            border: 1px solid rgb(255, 0, 0);
+        }
+
+        a:hover {
+            background-color: rgba(255, 255, 255, 0.2);
+            transform: translateY(-3px);
+            box-shadow: 0 5px 15px rgb(255, 0, 0);
+            border-color: rgb(255, 0, 0);
+        }
+
+        @media (max-width: 768px) {
+            ul {
+                flex-direction: column;
+                align-items: center;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .container {
+                padding: 20px;
+                margin: 15px;
+            }
+
+            h1 {
+                font-size: 2rem;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Todas Las Actividades CSS</h1>
+        <ul>
+            <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/selectores.html">Selectores</a></li>
+            <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/variables.html">Variables</a></li>
+            <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/bem.html">BEM</a></li>
+            <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/color.html">Color</a></li>
+            <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/texto.html">Texto</a></li>
+            <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/medidas.html">Medidas</a></li>
+            <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/imagenes.html">Imágenes</a></li>
+            <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/display.html">Display</a></li>
+            <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/margin.html">Margin</a></li>
+            <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/padding.html">Padding</a></li>
+            <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/border.html">Border</a></li>
+            <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/listas.html">Listas</a></li>
+            <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/overflow.html">Overflow</a></li>
+            <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/filters.html">Filters</a></li>
+            <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/transform.html">Transform</a></li>
+            <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/transition.html">Transition</a></li>
+            <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/animation.html">Animation</a></li>
+            <li><a href="https://k3viin1.github.io/dam_practica_0/actividades_css/3d.html">3D</a></li>
+        </ul>
+    </div>
+</body>
 </html>
